--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "npx nodemon app.js",
-    "test": "npx nodemon test.js",
-    "start": "node ./bin/www"
+    "start": "run-p start:**",
+    "start:app": "npm run start",
+    "production": "run-p production:** server",
+    "production:build": "npm run build",
+    "server": "cd server && npm run start",
+    "dev": "pm2 startOrReload ecosystem.json --env development",
+    "prod": "pm2 startOrReload prod-ecosystem.json --env production"
   },
   "author": "",
   "license": "ISC"
