--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
     "express": "^4.17.1",
     "lodas": "^1.2.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "pm2": "^3.5.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "run-p start:**",
-    "start:app": "npm run start",
-    "production": "run-p production:** server",
-    "production:build": "npm run build",
-    "server": "cd server && npm run start",
-    "dev": "pm2 startOrReload ecosystem.json --env development",
-    "prod": "pm2 startOrReload prod-ecosystem.json --env production"
+    "dev": "pm2 startOrReload prod-ecosystem.json --env production",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
