--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "lodas": "^1.2.0",
-    "mongoose": "^6.0.5",
+    "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
+    "otp-generator": "^2.0.1",
     "pm2": "^3.5.1"
   },
   "devDependencies": {},
